# hyperliquid-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  Taskfile.yml  build.rs  install.sh
.cursor/rules/: live-testnet-qa.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
agents/: error-catalog.json
docs/: registry-rollout-policy.md
droid-wiki/: .wiki-meta.json  by-the-numbers.md  deployment.md  maintainers.md  security.md
droid-wiki/applications/: cli.md  index.md
droid-wiki/background/: agent-first-contracts.md  index.md  ows-migration.md
droid-wiki/features/: accounts-and-transfers.md  (+6 more)
outputs/: testnet-command-coverage-2026-05-12.md  testnet-validation-report-2026-05-12.md
scripts/: pre-release-check.sh  qa-command-matrix.sh  qa-registry-rollout-gates.sh
src/: auth.rs  cli_runtime.rs  command_catalog.json  command_context.rs  command_handlers.rs  command_metadata.rs  command_registry.rs  config.rs  db.rs  dry_run.rs  errors.rs  http_api.rs  input_hardening.rs  lib.rs  main.rs  ows.rs  resolvers.rs  response_sanitization.rs  signing.rs  update_check.rs  watch.rs
tests/: account_abstraction.rs  account_command_context.rs  account_history_endpoints.rs  advanced_commands.rs  api_wallet.rs  asset_decode.rs  asset_resolution.rs  builder_codes.rs  cli_integration.rs  command_contracts.rs  config_resolution.rs  cross_area_integration.rs  dry_run_contracts.rs  error_exit_codes.rs  feedback.rs  market_command_context.rs  meta_command_context.rs  orders_cancel_modify.rs  orders_create.rs  orders_list_twap.rs  outcomes.rs  output_contracts.rs  output_formatting.rs  positions_transfers.rs  rate_limit.rs  referral.rs  registry_contracts.rs  release_artifacts.rs  schema_contracts.rs  security_contracts.rs  setup_wizard.rs  staking_commands.rs  status_command_context.rs  subaccounts.rs  vaults_borrowlend.rs  wallet_management.rs  watch_subscribe.rs
(+70 files in other folders)
